modifications to settings form + its typescript. Trying to solve anchor jump problem

--- a/tms/src/app/components/settings/setting-list/setting-list.component.scss
+++ b/tms/src/app/components/settings/setting-list/setting-list.component.scss
@@ -6,7 +6,7 @@ $danger: #dc3545;
 $warning: #ffc107;
 
 body {
-	background: #f9f9f9;
+	background: #fff;
 	font-family: "Roboto", sans-serif;
 }
 
@@ -14,24 +14,24 @@ body {
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
 }
 
-.profile-tab-nav{
-	min-width:250px;
+.profile-tab-nav {
+	min-width: 250px;
 }
-.tab-content{
-	flex:1;
+.tab-content {
+	flex: 1;
 }
 .form-group {
-    margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
 }
 
-.nav-pills{
-	a.nav-link{
-		padding:15px 20px;
-		border-bottom:1px solid #ddd;
-		border-radius:0;
-		color:#333;
-		i{
-			width:20px;
+.nav-pills {
+	a.nav-link {
+		padding: 15px 20px;
+		border-bottom: 1px solid #ddd;
+		border-radius: 0;
+		color: #333;
+		i {
+			width: 20px;
 		}
 	}
 }
@@ -44,3 +44,17 @@ body {
 		border: 5px solid #fff;
 	}
 }
+.custom-color{
+    color: #009688;
+	background-color: #009688;
+}
+textarea {
+	height: 150px 
+	!important; 
+}
+:target {
+	display: block;
+	position: relative;
+	top: -120px; 
+	visibility: hidden;
+  }
